- ppc and s390 provisioning
- COBBLER_SERVER environment variable can be used in place of --server
- replace bootif with link for ksdevice for non-PXE installs
- allow for communication with ssl-ified ports (anonymous only)
- ensure requests for profiles/systems get most updated copy from cobbler
- lvcreate, vgs, etc, paths from shell, not /usr/sbin
- set selinux context on new LVM partitions

- Thu Sep 18 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.5-1
- (BUGF) use file:/ks.cfg for --replace-self to make non-DHCP easier
- (BUGF) for xenpv installations using --system, pay attention to --virt-bridge overrides

- Wed Aug 29 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.0-1 
- merge devel into stable

- Tue Aug 19 2008 Michael DeHaan <mdehaan@redhat.com> - 1.1.1-1 
- (FEAT) update livecd builder to use F9 as src, reinstate livecd code.
- (BUGF) get --replace-self working on EL3 again
- (FEAT) make koan --replace-self work for reinstalls to (not from) SuSE
- (BUGF) remove debug print during --display

- Thu Jul 24 2008 Michael DeHaan <mdehaan@redhat.com> - 1.1.0-1
- (FEAT) Teach koan about ISO images 
- (FEAT) --list now takes a type of thing to list, removed --list-profiles, etc
- (DOC.) manpage cleanup

- Mon Jun 16 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.2-1
- Pay attention to remote http ports for kickstart URLs
- Fix error message for insufficient LVM volume group free space
- Fix bug in arch handling for qemu

- Fri Jun 06 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.1-1
- Fix problem that left cobbler kopts unused

- Wed May 27 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.0-1
- Release bump for 1.0/mirrors

* Thr May 14 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.2-2
- Added --virt-bridge override back
- misc cleanup

* Fri May 09 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.1-0
- Vmware installation hooks (experimental)
- add --add-reinstall-entry option (see manpage)
- request new URL locations