@@ -14,6 +14,7 @@ Koan CHANGELOG
 - ensure requests for profiles/systems get most updated copy from cobbler
 - lvcreate, vgs, etc, paths from shell, not /usr/sbin
 - set selinux context on new LVM partitions
+- --vm-poll option to restart (libvirt) VMs after they are done installing
 
 - Thu Sep 18 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.5-1
 - (BUGF) use file:/ks.cfg for --replace-self to make non-DHCP easier
